fixed spacing again

--- a/index.css
+++ b/index.css
@@ -239,11 +239,8 @@ main p{
 
 .image-item {
     margin: 1vh;
-    margin-left: 16vh;
+    margin-left: 17vh;
     padding: 10%;
     /*cursor: pointer;*/
 }
 
-.pic_link{
-    
-}
